--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,18 @@ Package: AllelicSeries
 Title: Allelic Series Test
 Version: 0.0.2
 Authors@R:
-    person(given = "Zachary",
+    c(person(given = "Zachary",
            family = "McCaw",
            email = "zmccaw@insitro.com",
            role = c("aut", "cre"),
-           comment = c(ORCID = "0000-0002-2006-9828"))
-Description: Implementation of gene-level rare coding-variant association tests targeting allelic series: cases where increasingly deleterious mutations have increasingly large phenotypic effects. TODO: Add citation to paper on bioRxiv.
+           comment = c(ORCID = "0000-0002-2006-9828")),
+       person(given = "Christoph",
+           family = "Klein",
+           email = "cklein@insitro.com",
+           role = c("ctb"),
+           comment = c(ORCID = "0000-0002-1748-625X"))
+    )
+Description: Implementation of gene-level rare variant association tests targeting allelic series: genes where increasingly deleterious mutations have increasingly large phenotypic effects. The COding-variant Allelic Series Test (COAST) operates on the benign missense variants (BMVs), deleterious missense variants (DMVs), and protein truncating variants (PTVs) within a gene. COAST uses a set of adjustable weights that tailor the test towards rejecting the null hypothesis for genes where the average magnitude of effect increases monotonically from BMVs to DMVs to PTVs. See McCaw ZR, Somineni H, Bereket M, Klein C, Karaletsos T, Casale FP, Koller D, Soare TW. "An allelic series rare variant association test for candidate gene discovery" <doi:10.1101/2022.12.23.521658>. 
 License: file LICENSE
 Encoding: UTF-8
 Imports:
@@ -18,7 +24,7 @@ LinkingTo:
     Rcpp,
     RcppArmadillo
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.0
 Suggests:
     knitr,
     rmarkdown,
