--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(ASKAT)
 export(Aggregator)
 export(COAST)
 export(Comparator)
+export(CountAlleles)
 export(DGP)
 export(OLS)
 importFrom(Rcpp,sourceCpp)
