--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: AllelicSeries
 Title: Allelic Series Test
-Version: 0.0.5.0
+Version: 0.0.6.0
 Authors@R:
     c(person(given = "Zachary",
            family = "McCaw",
@@ -18,6 +18,7 @@ Description: Implementation of gene-level rare variant association tests targeti
 License: BSD_3_clause + file LICENSE
 Encoding: UTF-8
 Imports:
+    methods,
     Rcpp,
     RNOmni,
     SKAT
