--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,14 +2,22 @@
 
 S3method(print,COAST)
 export(ASBT)
+export(ASBTSS)
 export(ASKAT)
+export(ASKATSS)
 export(Aggregator)
+export(BaseCountsSS)
 export(COAST)
+export(COASTSS)
+export(CalcSumstats)
 export(Comparator)
 export(Counts)
 export(DGP)
+export(IVWSS)
 export(OLS)
 exportClasses(COAST)
+exportClasses(DfOrNULL)
+importClassesFrom(methods,data.frame)
 importFrom(Rcpp,sourceCpp)
 importFrom(methods,show)
 useDynLib(AllelicSeries, .registration = TRUE)
