Integrate Jianhui's comments.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,6 +24,7 @@ License: BSD_3_clause + file LICENSE
 Encoding: UTF-8
 Imports:
     CompQuadForm,
+    glue,
     methods,
     Rcpp,
     RNOmni,
