Add genomic control.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(CalcSumstats)
 export(Comparator)
 export(Counts)
 export(DGP)
+export(GenomicControl)
 export(IVWSS)
 export(OLS)
 exportClasses(COAST)
