--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(DGP)
 export(GenomicControl)
 export(IVWSS)
 export(OLS)
+export(isPD)
 exportClasses(COAST)
 exportClasses(DfOrNULL)
 importClassesFrom(methods,data.frame)
