Add sumstats test. (#21)
* Add sumstats test.

* Update README

* Update OLS.

* Integrate Jianhui's comments.

* Add genomic control.

* Matrix inversion.

* Add eps to r3.

* Documentation

* Added handling for missing categories.

* Fix negative SKAT pval

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,14 +2,24 @@
 
 S3method(print,COAST)
 export(ASBT)
+export(ASBTSS)
 export(ASKAT)
+export(ASKATSS)
 export(Aggregator)
+export(BaseCountsSS)
 export(COAST)
+export(COASTSS)
+export(CalcSumstats)
 export(Comparator)
 export(Counts)
 export(DGP)
+export(GenomicControl)
+export(IVWSS)
 export(OLS)
+export(isPD)
 exportClasses(COAST)
+exportClasses(DfOrNULL)
+importClassesFrom(methods,data.frame)
 importFrom(Rcpp,sourceCpp)
 importFrom(methods,show)
 useDynLib(AllelicSeries, .registration = TRUE)
