--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export(ASBTSS)
 export(ASKAT)
 export(ASKATSS)
 export(Aggregator)
-export(BaseCountsSS)
+export(BaselineSS)
 export(COAST)
 export(COASTSS)
 export(CalcSumstats)
@@ -14,8 +14,8 @@ export(Comparator)
 export(Counts)
 export(DGP)
 export(GenomicControl)
-export(IVWSS)
 export(OLS)
+export(SumCountSS)
 export(isPD)
 exportClasses(COAST)
 exportClasses(DfOrNULL)
