Add utility for ultra-rare variants.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(BaselineSS)
 export(COAST)
 export(COASTSS)
 export(CalcSumstats)
+export(CollapseGeno)
 export(Comparator)
 export(Counts)
 export(DGP)
