--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: AllelicSeries
 Title: Allelic Series Test
-Version: 0.1.1.2
+Version: 0.1.1.3
 Authors@R:
     c(person(given = "Zachary",
            family = "McCaw",
-           email = "zmccaw@insitro.com",
+           email = "zmccaw@alumni.harvard.edu",
            role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-2006-9828")),
 	person(given = "Christoph",
