--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(COASTSS)
 export(CalcSumstats)
 export(CollapseGeno)
 export(Comparator)
+export(ContainsInt)
 export(Counts)
 export(DGP)
 export(GenomicControl)
